# sketches

./: .gitignore  b.txt  dataset_24465_4.txt  dataset_24476_3.txt  dataset_24476_4.txt  main.py  output.txt  random.txt  solution.txt  solve.txt
Example files/: files.txt  my_work_with_files.py  text.txt
chat/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
check_contract_service/: Dockerfile.check_contract  check_contract_service.py  docker-compose.yml
codexes/: debug_docx.py  mylogger.py  parser.py  parser_for_emb.py  summarize_embedding_chunks.py  summarize_jsons.py
date/: algoritms.docx  date.docx  library.txt  modules.docx  notes.docx  ~$....docx  ~$date.docx  ~$goritms.docx  ~$odules.docx  Конспект Python.ctb
dc-verifier/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
dc-verifier/crates/dc-adapter-fastapi/: Cargo.toml
dc-verifier/crates/dc-adapter-fastapi/python/dc_adapter_fastapi/: __init__.py  extractor.py
dc-verifier/crates/dc-adapter-fastapi/src/: call_graph.rs  extractor.rs  lib.rs  pydantic.rs
dc-verifier/crates/dc-cli/: Cargo.toml
dc-verifier/crates/dc-cli/src/: config.rs  main.rs
dc-verifier/crates/dc-cli/src/commands/: check.rs  init.rs  mod.rs  visualize.rs
dc-verifier/crates/dc-cli/src/reporters/: json.rs  markdown.rs  mod.rs
dc-verifier/crates/dc-core/: Cargo.toml
dc-verifier/crates/dc-core/benches/: call_graph_bench.rs
dc-verifier/crates/dc-core/src/: entry_point.rs  error.rs  lib.rs
dc-verifier/crates/dc-core/src/analyzers/: chain.rs  contract.rs  mod.rs  rules.rs  schema_parser.rs
dc-verifier/crates/dc-core/src/cache/: store.rs
dc-verifier/crates/dc-core/src/call_graph/: builder.rs  decorator.rs  edge.rs  graph.rs  mod.rs  node.rs
dc-verifier/crates/dc-core/src/data_flow/: mod.rs  path.rs  tracker.rs  variable.rs
dc-verifier/crates/dc-core/src/models/: chain.rs  contract.rs  location.rs  mod.rs  schema.rs
dc-verifier/crates/dc-core/src/parsers/: location.rs  mod.rs  openapi.rs  python.rs  typescript.rs
dc-verifier/crates/dc-core/tests/: chain_typescript_test.rs
dc-verifier/crates/dc-typescript/: Cargo.toml
dc-verifier/crates/dc-typescript/src/: call_graph.rs  lib.rs  swc_parser.rs  zod.rs
dc-verifier/crates/dc-typescript/tests/: integration_test.rs
download_files/: .dockerignore  .gitignore  check_limits.py  docker-compose.yml  downloadPDFfromKAD.py  parse_data.py  run_parser.sh  select_data.py  test_api.py
exampleFiles/: files.txt
exampleReq/: info_requests.txt  req.py
example_files/: files.txt  generate_random_text.py  myFiles.py
parse_docs/: parse.py  (+1 more)
(+89 files in other folders)
