[package]
name = "dc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dc-verifier"
path = "src/main.rs"

[dependencies]
dc-core = { path = "../dc-core" }
dc-adapter-fastapi = { path = "../dc-adapter-fastapi" }
dc-typescript = { path = "../dc-typescript" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

