[package]
name = "dc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rustpython-parser = "0.3"
swc_ecma_parser = "27.0"
swc_ecma_ast = "18.0"
swc_common = "17.0"
petgraph = "0.6"
indexmap = "2.5"
sled = "0.34"
blake3 = "1.5"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[[bench]]
name = "call_graph_bench"
harness = false

